refactor: name the two negation resolutions instead of passing a boolean
`getReducedIndexPrimaryKeyFormula` and `executeInContextAndIsolatedFormulaStack` took a
`negationResolvedPerRow` flag that read as a bare `true` or `false` at the call site, and
`NotTranslator` - the only reader - had to be opened to learn what either meant.

`NegationResolution.PER_ROW` and `IN_PLACE` say it in the argument. The JavaDoc explaining
why widening to the superset is correct when the caller re-examines every row now lives on
the enum, where it was previously duplicated across four declaration sites and could drift
between them.

No behaviour change: `PER_ROW` replaces `true`, `IN_PLACE` replaces `false`, and the two
implicit defaults become an explicit `IN_PLACE`.

Ref: #1585